--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
+<!DOCTYPE html>
 <script type="text/javascript">
-        var gk_isXlsx = false;
-        var gk_xlsxFileLookup = {};
-        var gk_fileData = {};
+        var saisXlsx = false;
+        var saxlsxFileLookup = {};
+        var safileData = {};
         function filledCell(cell) {
           return cell !== '' && cell != null;
         }
         function loadFileData(filename) {
-        if (gk_isXlsx && gk_xlsxFileLookup[filename]) {
+        if (saisXlsx && saxlsxFileLookup[filename]) {
             try {
-                var workbook = XLSX.read(gk_fileData[filename], { type: 'base64' });
+                var workbook = XLSX.read(safileData[filename], { type: 'base64' });
                 var firstSheetName = workbook.SheetNames[0];
                 var worksheet = workbook.Sheets[firstSheetName];
 
@@ -35,9 +36,9 @@
                 return "";
             }
         }
-        return gk_fileData[filename] || "";
+        return safileData[filename] || "";
         }
-        </script><!DOCTYPE html>
+</script>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
