--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html>
 <script type="text/javascript">
         var saisXlsx = false;
         var saxlsxFileLookup = {};
@@ -39,6 +40,7 @@
         return safileData[filename] || "";
         }
 </script>
+</html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
