--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<script type="text/javascript">
+<script /*type="text/javascript">*/
         var saisXlsx = false;
         var saxlsxFileLookup = {};
         var safileData = {};
